2007-12-19  Dmitry Xmelkov  <dmix@gmail.ru>

	* tests/simulate/math/isinf-01.c: New file.

	* include/math.h: Fix a few documentation errors (inherited from
	1.4). Make args names in doc adequate ones in function declaration.
	Use the '\a' Doxygen's command instead to '\c' anywhere.

	Add CLI to abort() and exit() functions, since GCC's _exit()
	does not disable interrupts today.
	* libc/stdlib/abort.S: Add CLI before jump to _exit.
	* libc/stdlib/exit.S: Ditto.
	* include/stdlib.h: Document the CLI.
	* tests/simulate/stdlib/abort-1.c: New file.

2007-12-18 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Undo the CLI change.  This rather belongs into _exit which is
	supplied by libgcc.a.
	Reopens bug #21841: Add CLI to exit() and abort() loops
        * libc/stdlib/exit.S: undo rev 1.2.
        * include/stdlib.h (exit): undo rev 1.30.

2007-12-18  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iotn43u.h: Fix RAMEND.

2007-12-18  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iom1284p.h: Fix RAMEND.
	* include/avr/iom32hvb.h: Ditto.
	* include/avr/iotn48.h: Ditto.
	* include/avr/iotn88.h: Ditto.
	* include/avr/io90pwm2b.h: Ditto.
	* include/avr/io90pwm3b.h: Ditto.
	* include/avr/io90pwm216.h: Ditto.
	* include/avr/io90pwm316.h: Ditto.

2007-12-18 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #21841: Add CLI to exit() and abort() loops
	* libc/stdlib/exit.S: add a CLI before entering the loop
	* include/stdlib.h (exit): document the CLI.

2007-12-18 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Bill Johnson
	bug #19669: Need function to read signature row
	* include/avr/boot.h (boot_signature_byte_get): Add new macro.

2007-12-18 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* tests/simulate/runtest.sh: replace /bin/bash by /bin/sh as the
	really generic name of the shell to invoke.  Not every system has
	bash in /bin.

2007-12-18  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #21840.
	* include/avr/iom48p.h: Fix RAMEND.